tests/diagnostics/snapshots/test_two_spans_different_lineno_lens.txt
Error: Can't compare apples with oranges (at <unknown>:99:6)
    | 
 97 | apple == orange
 98 | apple == orange
 99 | apple == orange
    |       ^^ Comparison attempted here
    | 
100 | This apple is on another line
    |      ----- This is an apple